# libbeshell-source

./: CMakeLists.txt  README.md  default.cpp  default.h  libbeshell.kdev4  theme.cpp  theme.h
include/: default.h  theme.h
source/: default.cpp  theme.cpp
